--- a/conf.yaml
+++ b/conf.yaml
@@ -1,2 +1,2 @@
 mysql:
-  uri: "root:@tcp(127.0.0.1:3306)/blog?charset=utf8mb4"
+  uri: "root:@tcp(127.0.0.1:3306)/blog?charset=utf8mb4&parseTime=true"
