--- a/compose.yaml
+++ b/compose.yaml
@@ -9,3 +9,7 @@ services:
     environment:
       MYSQL_DATABASE: blog
       MYSQL_ROOT_PASSWORD: root
+  redis:
+    image: redis:7
+    ports:
+      - 127.0.0.1:6379:6379
